fix java 17 deprecation warnings